tests/neg-macros/i14039/Test_2.scala
class Dsl {
  val entries = Seq.newBuilder[Any]
  inline def get(): Unit = entries += Macro.apply()
  def test = get() // error
}
